Fix z-index of temporal picker

--- a/app/assets/stylesheets/modules/dropdown.css.scss
+++ b/app/assets/stylesheets/modules/dropdown.css.scss
@@ -22,7 +22,7 @@
 }
 
 .xdsoft_datetimepicker, .xdsoft_timepicker {
-  z-index:10000;
+  z-index:10001;
 }
 
 // Hide jquery.datetimepicker's year field
